<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="duration_hours">
        <item quantity="one">%s hour</item>
        <item quantity="other">%s hours</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%s minute</item>
        <item quantity="other">%s minutes</item>
    </plurals>
    <string name="app_name" translatable="false">myenviro</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_about">About Us</string>
    <string name="title_about_hospital">About MyEnviro</string>
    <string name="title_announcement">Announcement</string>
    <string name="title_announcement_detail">News detail</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_contributors">Contributors</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_doctor">Doctor</string>
    <string name="title_doctor_reviews">Doctor Reviews</string>
    <string name="title_daily_activity">Daily Activity</string>
    <string name="title_eula">End User License Agreement</string>
    <string name="title_faq">FAQ</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_help">Help</string>
    <string name="title_holidays">Holidays</string>
    <string name="title_history">History</string>
    <string name="title_home">Home</string>
    <string name="title_information">Information</string>
    <string name="title_licenses">Open Source Licenses</string>
    <string name="title_login">Login</string>
    <string name="title_mission">Mission</string>
    <string name="title_motto">Motto</string>
    <string name="title_news">News</string>
    <string name="title_news_detail">News Detail</string>
    <string name="title_policy">Privacy Policy</string>
    <string name="title_profile">Profile</string>
    <string name="title_rate_app">Rate MyEnviro</string>
    <string name="title_register">Patient Registration</string>
    <string name="title_register_account">Register New Account</string>
    <string name="title_recommend_us">Recommend Us</string>
    <string name="title_report">Report</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_room">Room Available</string>
    <string name="title_search">Search</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share</string>
    <string name="title_surgery_schedule">Surgery Schedule</string>
    <string name="title_teams">Teams</string>
    <string name="title_ticket_else">My Other Tickets</string>
    <string name="title_ticket_another">Another Patient Tickets</string>
    <string name="title_tos">Term of Service</string>
    <string name="title_values">Values</string>
    <string name="title_vision">Vision</string>
    <string name="title_welcome">Welcome</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_setting">Settings</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_holiday">Holidays</string>
    <string name="menu_item_ticket_other">Another Patient Tickets</string>
    <string name="menu_item_ticket_else">My Other Tickets</string>
    <string name="menu_item_share">Share</string>
    <string name="values_content"><![CDATA[Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit]]></string>
    <string name="vision_content"><![CDATA[Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit]]></string>
    <string name="about_main"><![CDATA[<b>MyEnviro</b> Version %1$s]]></string>
    <string name="about_copyrights"><![CDATA[\u00A9 2021 PT Permata Bunda Bersama. All rights Reserved]]></string>
    <string name="about_app">Developer</string>
    <string name="about_developer"><![CDATA[MyEnviro is created by IT Team PT Permata Bunda Bersama Surabaya, Indonesia. <br/><br/><b>Development Leader :</b> Roni Ahmad <br/>Please fell free to contact Us at <br/>Email: <a href="mailto:roni.connect@gmail.com">roni.connect@gmail.com</a>.]]></string>
    <string name="about_myenviro">MyEnviro is Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="about_app_tagline">Connecting the dots</string>
    <string name="org_name" translatable="false">PT PERMATA BUNDA BERSAMA</string>
    <string name="how_to_register_new_account">How to register new account at MyEnviro</string>
    <string name="how_to_register_new_account_content">
        <![CDATA[<p>Registering an account with MyEnviro is easy. Here are steps to follow:
        <br /><br />1. In the <strong>Select Hospital</strong> section, make sure you choose the hospital you want to visit.
        <br /><br />2. Fill in the <strong>Username</strong> that you want to use in the HalloBunda application.
        <br /><br />3. Fill in <strong>Email</strong> using active email. You can use this email later to reset your password if you forget it.
        <br /><br />3. Type the <strong>Password</strong> that you want to use in the HalloBunda application. Use a strong password so others can not guess your password.
        <br /><br />4. Retype <strong>Password</strong> to confirm your password.
        <br /><br />6. <strong>If you are an new patient</strong> (never been to the hospital you are currently visiting),
        then check on "I am an new patient" checkbox.
        <br /><br />7. <strong>Medical Record ID</strong> is your medical record identity at the hospital you are currently visiting.
        <br /><br />8. Date of birth is the date you were born according to your ID card.
        <br /><br />9. ID Number is NIK according to ID card.
        <br /><br />10. If you have never visited the hospital you are currently visiting,
            then after registering, don\'t forget to ask our Front Office officer for verification of your account.
        <br /><br />11. If you have filled in all data correctly, check the <strong>\"I have read and agree to the terms and conditions\"</strong> section.
        <br /><br />12. Click the <strong>Sign Up</strong> button</p> ]]></string>
    <string name="mission_content_1"><![CDATA[&#8226;Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit]]></string>
    <string name="mission_content_2">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="mission_content_3">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="mission_content_4">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="motto_content"><![CDATA[Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit]]></string>
    <string name="accept">Accept</string>
    <string name="click_to_logout">LogOut</string>
    <string name="authenticating">Authenticating...</string>
    <string name="available">Available</string>
    <string name="booking_code"><![CDATA[Booking Code %1$s]]></string>
    <string name="cancel">Cancel</string>
    <string name="classroom">Class</string>
    <string name="close_and_go_back">Close and go back</string>
    <string name="contact_person">Contact Person</string>
    <string name="disable_services"><![CDATA[This service is currently unavailable due to %1$s]]></string>
    <string name="event_finished">Ended</string>
    <string name="for_more_information">For more information, please contact:</string>
    <string name="filter">Filter</string>
    <string name="holiday_information">Holidays Information</string>
    <string name="loading">Loading...</string>
    <string name="logging_out">Logging Out...</string>
    <string name="holiday_description"><![CDATA[<strong>Please notice : </strong> The following is the holiday information. You cannot register a visit to the specialist clinic %1$s during the holidays below. Please select another visit day. ]]></string>
    <string name="hospital_dummy">Bunda Hospital</string>
    <string name="more">Read More</string>
    <string name="currently_not_available">Not Available</string>
    <string name="quota"><![CDATA[Quota: %1$s]]></string>
    <string name="quota_available"><![CDATA[Quota available %1$s]]></string>
    <string name="quota_Not_available_with_reason"><![CDATA[Quota not available due to %1$s]]></string>
    <string name="password">Password</string>
    <string name="forgot_password">I Forgot My Password</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="end_date">End</string>
    <string name="duration">Duration</string>
    <string name="task">Task</string>
    <string name="business_name">MyEnviro</string>
    <string name="business_address">Somewhere in Surabaya</string>
    <string name="scan_here">Scan here</string>
    <string name="start_date">Start</string>
    <string name="signup">Sign Up</string>
    <string name="become_member">You are not logged in. Become a member first and enjoy the benefits!</string>
    <string name="signin">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="already_have_account">Welcome to MyEnviro\nAlready  have an  account?</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_user_history_list" translatable="false">com.orcalab.myenviro_pref_user_history_list</string>
    <string name="key_use_last_login_id" translatable="false">key_use_last_login_id</string>
    <string name="pref_user_news_list" translatable="false">com.orcalab.myenviro_pref_user_news_list</string>
    <string name="pref_app_version" translatable="false">com.orcalab.myenviro_pref_app_version</string>
    <string name="pref_user_help" translatable="false">com.orcalab.myenviro_pref_user_help</string>
    <string name="pref_user_faq" translatable="false">com.orcalab.myenviro_pref_user_faq</string>
    <string name="pref_user_tos" translatable="false">com.orcalab.myenviro_pref_user_tos</string>
    <string name="pref_user_privacy" translatable="false">com.orcalab.myenviro_pref_user_privacy</string>
    <string name="pref_app_osl" translatable="false">com.orcalab.myenviro_pref_app_osl</string>
    <string name="pref_app_contributor" translatable="false">com.orcalab.myenviro_pref_app_contributor</string>
    <string name="pref_enable_estimate_time" translatable="false">com.orcalab.myenviro_pref_enable_estimate_time</string>
    <string name="key_display_popup_alert" translatable="false">display_popup_alert</string>
    <string name="title_display_popup_alert">Display PopUp Alert</string>
    <string name="title_enable_est_waiting">Enable Estimated Waiting Time</string>
    <string name="title_history_list">Default History</string>
    <string name="title_use_last_login_id">Last Login Id</string>
    <string name="title_news_list">Default News List</string>
    <string name="title_version">Version</string>
    <string name="default_history_list">5</string>
    <string name="summary_use_last_login_id">Use last login Id</string>
    <string name="summary_version">3.5</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="summary_display_popup_alert">Always display a popup alert message</string>
    <string name="summary_display_est_waiting">It will display Estimated Waiting Time when enabled</string>
</resources>