<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2019 PT Permata Bunda Bersama
  Developer:
  Roni Ahmad
  roni.connect@gmail.com
  +6287781289268
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HalloBunda.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            app:popupTheme="@style/Theme.HalloBunda.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.ToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about_hospital" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/about_scrolling_content"
        android:layout_width="@dimen/main_content_width"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:background="@color/content_background"
        android:clipToPadding="false"
        android:elevation="@dimen/card_elevation"
        android:paddingBottom="?actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/about_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            tools:ignore="RtlSymmetry">

            <!-- Vision -->
            <TextView
                android:id="@+id/about_vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_vision"
                style="@style/AboutTitle" />

            <TextView
                android:id="@+id/about_vision_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginBottom="@dimen/padding_normal"
                android:text="@string/vision_content"
                style="@style/AboutDesc" />

            <!-- Mission -->
            <TextView
                android:id="@+id/about_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_mission"
                style="@style/AboutTitle" />

            <TextView
                android:id="@+id/about_mission_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginBottom="@dimen/padding_normal"
                android:text="@string/mission_content_1"
                style="@style/AboutDesc" />

            <!-- Values -->
            <TextView
                android:id="@+id/about_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_values"
                style="@style/AboutTitle" />

            <TextView
                android:id="@+id/about_values_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_normal"
                android:text="@string/values_content"
                style="@style/AboutDesc" />

            <!-- Motto -->
            <TextView
                android:id="@+id/about_motto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/title_motto"
                style="@style/AboutTitle" />

            <TextView
                android:id="@+id/about_motto_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginBottom="@dimen/padding_normal"
                android:text="@string/motto_content"
                style="@style/AboutDesc" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>