<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2019 PT Permata Bunda Bersama
  Developer:
  Roni Ahmad
  roni.connect@gmail.com
  +6287781289268
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notice_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@null">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/become_member"
        style="@style/NoticeDesc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_normal"
        android:weightSum="2">

        <Button
            android:id="@+id/login_link"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            style="@style/Widget.HalloBunda.Login"/>

        <Button
            android:id="@+id/register_link"
            style="@style/Widget.HalloBunda.Register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:gravity="center"
            android:text="@string/signup"/>

    </LinearLayout>

</LinearLayout>