<?xml version="1.0" encoding="utf-8"?>
<!--
  Developer Contact:
  Roni Ahmad
  roni.connect@gmail.com
  +6287781289268
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="@dimen/splash_image_width"
        android:layout_height="@dimen/splash_image_height"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:transitionName="@string/transition_session_image"
        android:src="@drawable/ic_logo_myenviro"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_product_name"
        style="@style/SplashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_centerInParent="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_product_tag"
        style="@style/SplashTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_product_name"
        android:layout_centerInParent="true"
        android:text="@string/about_app_tagline" />

    <TextView
        android:id="@+id/tv_copyright"
        style="@style/SplashCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_centerInParent="true"
        android:text="@string/about_copyrights" />

</RelativeLayout>