<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2020 RS Bunda.
  Developer Info:
  Roni Ahmad
  roni.connect@gmail.com
  +6287781289268
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/padding_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/already_have_account"
                    style="@style/Login.HeaderText.NoMode"/>

                <ImageView
                    android:layout_width="@dimen/login_image_width"
                    android:layout_height="@dimen/login_image_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_logo_myenviro" />

            </RelativeLayout>

            <!--  Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAlignment="viewStart">

                <EditText
                    android:id="@+id/input_email"
                    style="@style/Login.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--  Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:textAlignment="viewStart"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
                <EditText
                    android:id="@+id/input_password"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:maxLines="1"
                    android:text=""/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/link_forgot"
                style="@style/Widget.HalloBunda.ForgotButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/login_link"
                style="@style/Widget.HalloBunda.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/signin" />

            <Button
                android:id="@+id/link_signup"
                style="@style/Widget.HalloBunda.SignupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/create_account" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>